--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ h2 {
   color: #66BFBF;
   font-size: 2.5rem;
   font-family: 'Montserrat', sans-serif;
-  padding-bottom: 10px;
+  padding-bottom: 0.625rem;
 }
 
 h3 {
@@ -34,9 +34,9 @@ hr {
   border-style: none;
   border-top-style: dotted;
   width: 4%;
-  border-width: 6px;
+  border-width: 0.375rem;
   color: #EAF6F6;
-  margin: 100px auto;
+  margin: 6.25rem auto;
 }
 
 p {
@@ -46,20 +46,20 @@ p {
 .top-container {
   background-color: #E4F9F5;
   position: relative;
-  padding-top: 100px;
+  padding-top: 6.25rem;
   line-height: 2;
 }
 
 .top-cloud {
   position: absolute;
-  top: 40px;
-  right: 300px;
+  top: 2.5rem;
+  right: 18.75rem;
 }
 
 .bottom-cloud {
   position: absolute;
-  left: 250px;
-  bottom: 300px;
+  left: 15.625rem;
+  bottom: 18.75rem;
 }
 
 .body_photo {
@@ -74,28 +74,28 @@ p {
 }
 
 .middle-container {
-  margin: 100px 0;
+  margin: 6.25rem 0;
 }
 
 .even_gif {
   float: right;
-  margin-left: 30px;
+  margin-left: 1.875rem;
 }
 
 .odd_gif {
   float: left;
-  margin-right: 30px;
+  margin-right: 1.875rem;
 }
 
 .skill-row {
   width: 50%;
-  margin: 100px auto;
+  margin: 6.25rem auto;
   text-align: left;
   line-height: 2;
 }
 .projects {
   width: 50%;
-  margin: 100px auto;
+  margin: 6.25rem auto;
   text-align: left;
   line-height: 2;
 }
@@ -107,7 +107,7 @@ p {
 .contact-para {
   overflow: hidden;
   width: 40%;
-  margin: 40px auto 60px;
+  margin: 2.5rem auto 3.75rem;
 }
 
 
@@ -117,16 +117,16 @@ p {
 }
 
 .contact-me {
-  margin: 60px auto;
+  margin: 3.75rem auto;
 }
 
 .bottom-container {
   background-color: #66BFBF;
-  padding: 50px 0 20px;
+  padding: 3.125rem 0 1.25rem;
 }
 
 .footer-link {
-  margin: 10px 20px;
+  margin: 0.625rem 1.25rem;
   text-decoration: none;
 }
 
@@ -137,7 +137,7 @@ p {
 .copyright {
   color: #EAF6F6;
   font-size: 0.75rem;
-  padding: 20px 0;
+  padding: 1.25rem 0;
 }
 
 .btn {
@@ -149,11 +149,11 @@ p {
   background-image: linear-gradient(to bottom, #11cdd4, #11999e);
   -webkit-border-radius: 8;
   -moz-border-radius: 8;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   font-family: 'Montserrat', sans-serif;
   color: #ffffff;
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
+  font-size: 1.25rem;
+  padding: 0.625rem 1.25rem 0.625rem 1.25rem;
   text-decoration: none;
 }
 
