Use Github API to show updated github stats.

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -43,6 +43,11 @@ hr {
 p {
   line-height: 2;
 }
+
+li {
+  display: block;
+}
+
 /**********************************************Class selectors**********************************************/
 .top-container {
   background-color: #222831;
