--- a/css/light-mode.css
+++ b/css/light-mode.css
@@ -42,6 +42,11 @@ hr {
 p {
   line-height: 2;
 }
+
+li {
+  display: block;
+}
+
 /**********************************************Class selectors**********************************************/
 .top-container {
   background-color: #E4F9F5;
